--- a/02/style.css
+++ b/02/style.css
@@ -26,7 +26,7 @@ body{
     text-align: center;
     padding: 30px;
     width: 320px;
-    box-shadow: inset -25px -25px 0px 20px  #BE87EF;
+    box-shadow: inset -35px -30px 0px 20px  #BE87EF;
     border: 12px solid #400A28;
     border-radius: 20px;
 }
@@ -39,5 +39,17 @@ button{
 }
 
 input{
-    background-color: rgb(159, 159, 159);
+    background-color: #BDF2DF;
+    width: 218px;
+    height: 65px;
+    border: 8px solid #400A28;
+    border-radius: 16px;
+    box-shadow: inset 4px 4px 4px 0px  #00000085;
+    padding: 10px;
+    padding-top: 15px;
+    font: 400 22px 'Share', sans-serif;
+}
+
+.teclado{
+    margin-top: 20px;
 }
