--- a/02/style.css
+++ b/02/style.css
@@ -16,9 +16,14 @@
 }
 
 body{
+background: radial-gradient(circle, rgba(246,238,225,1) 30%, rgba(224,234,233,1) 68%, rgba(208,205,248,1) 100%);
+}
+
+main{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 100px 0;
 }
 
 .calculadora{
@@ -48,8 +53,29 @@ input{
     padding: 10px;
     padding-top: 15px;
     font: 400 22px 'Share', sans-serif;
+    text-align: right;
 }
 
 .teclado{
     margin-top: 20px;
+}
+
+header{
+    /* box-shadow: 4px 4px 4px 0px  #00000085; */
+    padding: 12px 0;
+}
+
+.container-header{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+header img{
+    width: 60px;
+    margin: 0 30px 0 70px;
+}
+
+h1{
+    font: 500 40px 'Share', sans-serif;
 }
