--- a/02/style.css
+++ b/02/style.css
@@ -16,7 +16,7 @@
 }
 
 body {
-    background: linear-gradient(to top right, #FFE6F1, #E7DCE9, #B5F0F3);
+    background: linear-gradient(to top right, #ffd9f0, #f2dbff, #B5F0F3);
     background-repeat: no-repeat;
 }
 
