--- a/02/style.css
+++ b/02/style.css
@@ -24,7 +24,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 97px 0;
+    margin: 88px 0;
 }
 
 .calculadora {
@@ -42,6 +42,19 @@ button {
     padding: 10px 15px;
     margin: 5px 3px;
     border-radius: 8px;
+    background-color: #A183E2;
+    color: white;
+    font-weight: 500;
+    cursor: pointer;
+    box-shadow: 5px 5px 0px #7459af;
+    transition-duration: .3s;
+}
+
+
+button:active {
+    transform: translate(3px, 3px);
+    transition-duration: .3s;
+    box-shadow: 2px 2px 0px #654d98;
 }
 
 input {
